syntax = "proto3";

package orderbook.v1;

import "google/api/annotations.proto";
import "google/protobuf/timestamp.proto";

option go_package = "github.com/kolobublik/limit-order-book/api/orderbook/v1;v1";

service OrderBook {
	rpc CreateOrder (CreateOrderRequest) returns (Order) {
		option (google.api.http) = {
			post: "/v1/orders",
			body: "*"
		};
	}
	rpc GetOrder (GetOrderRequest) returns (Order) {
		option (google.api.http) = {
			get: "/v1/orders/{order_id}"
		};
	}
	rpc CancelOrder (CancelOrderRequest) returns (CancelOrderResponse) {
		option (google.api.http) = {
			delete: "/v1/orders/{order_id}"
		};
	}
	rpc ListOrders (ListOrdersRequest) returns (ListOrdersResponse) {
		option (google.api.http) = {
			get: "/v1/orders"
		};
	}
	rpc GetInstrumentQuote (GetInstrumentQuoteRequest) returns (InstrumentQuote) {
		option (google.api.http) = {
			get: "/v1/instruments/{instrument}/quote"
		};
	}
}

enum Side {
	SIDE_UNSPECIFIED = 0;
	BUY = 1;
	SELL = 2;
}

enum OrderType {
	ORDER_TYPE_UNSPECIFIED = 0;
	LIMIT = 1;
	MARKET = 2;
	STOP_LIMIT = 3;
	STOP = 4;
	TAKE_PROFIT_STOP_LOSS = 5;
}

enum OrderStatus {
	ORDER_STATUS_UNSPECIFIED = 0;
	WORKING = 1;
	DONE = 2;
}

message Order {
	string order_id = 1;
	string client_order_id = 2;
	string instrument = 3;
	Side side = 4;
	OrderType type = 5;
	OrderStatus status = 6;
	double price = 7;
	double size = 8;
	google.protobuf.Timestamp created_at = 9;
}

message CreateOrderRequest {
	string client_order_id = 1;
	string instrument = 2;
	Side side = 3;
	OrderType type = 4;
	double price = 5;
	double size = 6;
}

message GetOrderRequest {
	string order_id = 1;
}

message CancelOrderRequest {
	string order_id = 1;
}

message CancelOrderResponse {
	string order_id = 1;
	OrderStatus status = 2;
}

message ListOrdersRequest {
	string instrument = 1;
}

message ListOrdersResponse {
	repeated Order orders = 1;
}

message InstrumentQuote {
	string instrument = 1;
	double best_bid_price = 2;
	double best_bid_size = 3;
	double best_ask_price = 4;
	double best_ask_size = 5;
}

message GetInstrumentQuoteRequest {
	string instrument = 1;
}
